@@ -1,3 +1,8 @@
+2004-11-08  Mikael Hallendal  <micke@imendio.com>
+
+	* examples/lm-change-password.c: Added SSL support
+	* examples/lm-register.c: Added SSL support
+
 2004-10-31  Mikael Hallendal  <micke@imendio.com>
 
 	* Release 0.17.2
